[package]
name = "run-when"
version = "1.0.3"
edition = "2021"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "A simple binary that watches filesystem and runs a given executable in a debounced way."
homepage = "https://github.com/aalekhpatel07/run-when"
repository = "https://github.com/aalekhpatel07/run-when"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["watcher", "filesystem", "monitor", "command"]

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
notify = "4.0.17"
anyhow = "1.0.58"
parse_duration = "2.1.1"
log = "0.4.17"
simple_logger = "2.2.0"

[profile.release]
lto = "fat"
